--- a/app/src/main/res/layout/activity_car_booking.xml
+++ b/app/src/main/res/layout/activity_car_booking.xml
@@ -9,163 +9,171 @@
     android:background="#534747"
     tools:context=".CarBooking">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <RelativeLayout
         android:layout_width="wrap_content"
-         android:layout_height="86dp"
+        android:layout_height="86dp"
         android:elevation="3dp"
         android:background="@drawable/backgroung"
-        android:paddingBottom="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:paddingBottom="5dp">
+        <LinearLayout
+            android:id="@+id/lin1"
+            android:layout_marginLeft="8dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="4dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="41dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="6dp"
-            app:layout_constraintBottom_toBottomOf="@+id/cityname"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.6"
-            app:srcCompat="@drawable/location" />
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="41dp"
+                android:layout_height="36dp"
+                android:layout_gravity="center_vertical"
+                app:srcCompat="@drawable/location" />
 
-        <TextView
-            android:id="@+id/cityname"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/cityname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Bhubaneshwar"
+                android:layout_gravity="center_vertical"
+                android:textColor="#000"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:text="Bhubaneshwar"
-            android:textColor="#000"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.004"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_below="@+id/lin1"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_marginLeft="15dp"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginTop="2dp"
+                    android:text="Start Date and Time"
+                    android:textColor="#fff"
+                    android:textSize="13sp" />
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="68dp"
-            android:layout_marginTop="2dp"
-            android:text="Start Date and Time"
-            android:textColor="#fff"
-            android:textSize="13sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cityname" />
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="46dp"
-            android:layout_marginTop="17dp"
-            android:layout_marginEnd="3dp"
-            app:layout_constraintEnd_toStartOf="@+id/textView4"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
-            app:srcCompat="@drawable/calender" />
+                <LinearLayout
+                    android:id="@+id/lin2"
+                    android:layout_marginLeft="8dp"
+                    android:layout_below="@id/textView3"
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="70dp"
-            android:layout_marginTop="55dp"
-            android:layout_marginEnd="3dp"
-            android:background="#fff"
-            android:gravity="center"
-            android:padding="2dp"
-            android:text="10 OCTOBER 2020"
-            android:textColor="#000"
-            android:textSize="10sp"
-            app:layout_constraintEnd_toStartOf="@+id/textView5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        app:srcCompat="@drawable/calender" />
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="55dp"
-            android:background="#fff"
-            android:gravity="center"
-            android:padding="2dp"
-            android:text="09:00 AM"
-            android:textColor="#000"
-            android:textSize="10sp"
-            app:layout_constraintStart_toEndOf="@+id/textView4"
-            app:layout_constraintTop_toTopOf="parent" />
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="2dp"
+                        android:background="#fff"
+                        android:gravity="center_horizontal"
+                        android:padding="2dp"
+                        android:text="10 OCTOBER 2020"
+                        android:textColor="#000"
+                        android:textSize="10sp" />
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="66dp"
-            android:layout_marginTop="37dp"
-            android:layout_marginEnd="55dp"
-            android:layout_marginBottom="1dp"
-            android:text="End Date and Time"
-            android:textColor="#fff"
-            android:textSize="13sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView7"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
-            app:layout_constraintTop_toTopOf="parent" />
+                    <TextView
+                        android:id="@+id/startt"
+                        android:onClick="starttime"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="2dp"
+                        android:background="#fff"
+                        android:gravity="center_horizontal"
+                        android:padding="2dp"
+                        android:hint="9:00 AM"
+                        android:textColor="#000"
+                        android:textSize="10sp" />
+                </LinearLayout>
+            </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
-            android:background="#fff"
-            android:foregroundGravity="center"
-            android:gravity="center"
-            android:padding="2dp"
-            android:text="10 OCTOBER 2020"
-            android:textColor="#000"
-            android:textSize="10sp"
-            app:layout_constraintEnd_toStartOf="@+id/textView8"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
-            android:layout_marginEnd="36dp"
-            android:background="#fff"
-            android:gravity="center"
-            android:padding="2dp"
-            android:text="09:00 PM"
-            android:textColor="#000"
-            android:textSize="10sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView7"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/lin1"
+                    android:layout_alignRight="@+id/textView3"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="2dp"
+                    android:text="End Date and Time"
+                    android:textColor="#fff"
+                    android:textSize="13sp" />
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="27dp"
-            android:layout_marginTop="54dp"
-            android:layout_marginEnd="2dp"
-            app:layout_constraintEnd_toStartOf="@+id/textView7"
-            app:layout_constraintStart_toEndOf="@+id/textView5"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/calender" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <LinearLayout
+                    android:id="@+id/lin3"
 
+                    android:layout_width="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+
+                        android:layout_marginRight="2dp"
+                        app:srcCompat="@drawable/calender" />
+
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"
+
+                        android:background="#fff"
+
+                        android:gravity="center"
+                        android:padding="2dp"
+                        android:text="10 OCTOBER 2020"
+                        android:textColor="#000"
+                        android:textSize="10sp" />
+
+                    <TextView
+                        android:id="@+id/endt"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="2dp"
+                        android:background="#fff"
+                        android:gravity="clip_horizontal"
+                        android:padding="2dp"
+                        android:onClick="endTime"
+                        android:hint="9:00 AM"
+                        android:textColor="#000"
+                        android:textSize="10sp" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+        </LinearLayout>
+    </RelativeLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/bookingrecycler"
         android:layout_marginTop="15dp"
+
         tools:listitem="@layout/carnooking"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
