--- a/app/src/main/res/layout/activity_payment_page.xml
+++ b/app/src/main/res/layout/activity_payment_page.xml
@@ -287,7 +287,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:text="₹525"
+                    android:text="₹"
                     android:textColor="#fff"
                     android:textSize="22sp"
                     android:textStyle="bold" />
@@ -434,7 +434,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="4dp"
-                android:hint="1000"
+                android:text="0"
                 android:textColor="#fff"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -467,7 +467,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="4dp"
-                android:hint="1000"
+               android:text="0"
                 android:textColor="#fff"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -540,6 +540,7 @@
                     android:textColor="#fff" />
 
                 <TextView
+                    android:textStyle="bold"
                     android:id="@+id/totalamount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
