--- a/app/src/main/res/layout/activity_payment_page.xml
+++ b/app/src/main/res/layout/activity_payment_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,6 +8,14 @@
     android:background="#000"
     android:orientation="vertical"
     tools:context=".PaymentPage">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#000"
+        android:orientation="vertical">
+
+
 
 
     <LinearLayout
@@ -601,5 +609,8 @@
         android:paddingBottom="2dp"
         android:text="BOOK NOW"
         android:textSize="25sp" />
-</LinearLayout>
+
+    </LinearLayout>
+
+</ScrollView>
 
