--- a/app/src/main/res/layout/activity_car_booking.xml
+++ b/app/src/main/res/layout/activity_car_booking.xml
@@ -76,19 +76,18 @@
                         android:id="@+id/imageView2"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:tint="#fff"
                         app:srcCompat="@drawable/calender" />
 
                     <TextView
                         android:id="@+id/textView4"
-                        android:layout_width="90dp"
+                        android:layout_width="80dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="2dp"
-                        android:background="#fff"
-                        android:gravity="center_horizontal"
+                        android:layout_marginLeft="4dp"
                         android:padding="2dp"
-                        android:text="10 OCTOBER 2020"
-                        android:textColor="#000"
-                        android:textSize="10sp" />
+                        android:text="10/12/2020"
+                        android:textColor="#fff"
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/startt"
@@ -96,12 +95,10 @@
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="2dp"
-                        android:background="#fff"
-                        android:gravity="center_horizontal"
-                        android:padding="2dp"
                         android:hint="9:00 AM"
-                        android:textColor="#000"
-                        android:textSize="10sp" />
+                        android:padding="2dp"
+                        android:textColor="#fff"
+                        android:textSize="14sp" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -136,33 +133,29 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginRight="2dp"
+                        android:tint="#fff"
                         app:srcCompat="@drawable/calender" />
 
                     <TextView
                         android:id="@+id/textView7"
-                        android:layout_width="90dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="80dp"
+                        android:layout_height="match_parent"
 
-                        android:background="#fff"
-
-                        android:gravity="center"
                         android:padding="2dp"
-                        android:text="10 OCTOBER 2020"
-                        android:textColor="#000"
-                        android:textSize="10sp" />
+                        android:text="10/12/2020"
+                        android:textColor="#fff"
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/endt"
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="2dp"
-                        android:background="#fff"
                         android:gravity="clip_horizontal"
-                        android:padding="2dp"
-
                         android:hint="9:00 AM"
-                        android:textColor="#000"
-                        android:textSize="10sp" />
+
+                        android:textColor="#fff"
+                        android:textSize="14sp" />
 
                 </LinearLayout>
 
