--- a/app/src/main/res/layout/activity_city_selection.xml
+++ b/app/src/main/res/layout/activity_city_selection.xml
@@ -261,13 +261,14 @@
                 <ImageButton
 
                     android:layout_width="match_parent"
-                    android:layout_height="43dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="90dp"
                     android:layout_marginTop="15dp"
                     android:layout_marginEnd="90dp"
                     android:background="@drawable/shapewhitebackground"
+                    android:backgroundTint="#93C45B"
                     android:onClick="onClickFindCarButton"
-                    android:scaleType="fitXY"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/findcarbutton" />
 
 
