--- a/app/src/main/res/layout/activity_payment_page.xml
+++ b/app/src/main/res/layout/activity_payment_page.xml
@@ -59,7 +59,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
                                 android:layout_marginLeft="10dp"
-                                android:tint="#000000"
+                                android:tint="#fff"
                                 app:srcCompat="@drawable/luggage" />
 
                             <TextView
@@ -69,7 +69,7 @@
                                 android:layout_gravity="center_vertical"
                                 android:layout_marginLeft="2dp"
                                 android:hint="Automatic"
-                                android:textColor="#000000"
+                                android:textColor="#fff"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
 
@@ -79,7 +79,6 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
                                 android:layout_marginLeft="3dp"
-                                android:tint="#000000"
                                 app:srcCompat="@drawable/petrol" />
 
                             <TextView
@@ -89,7 +88,7 @@
                                 android:layout_gravity="center_vertical"
                                 android:layout_marginLeft="2dp"
                                 android:hint="Petrol"
-                                android:textColor="#000000"
+                                android:textColor="#fff"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
                         </LinearLayout>
@@ -119,6 +118,7 @@
                                 android:layout_gravity="center_vertical"
                                 android:layout_marginRight="2dp"
                                 android:scaleType="centerInside"
+                                android:tint="#fff"
                                 app:srcCompat="@drawable/calender" />
 
                             <TextView
@@ -128,7 +128,7 @@
                                 android:layout_gravity="center_vertical"
                                 android:layout_marginLeft="3dp"
                                 android:hint="10/12/2020"
-                                android:textColor="#000000" />
+                                android:textColor="#fff" />
 
                             <TextView
                                 android:id="@+id/starttime"
@@ -137,7 +137,7 @@
                                 android:layout_gravity="center_horizontal|center_vertical"
                                 android:gravity="center"
                                 android:hint="9:00 AM"
-                                android:textColor="#000000" />
+                                android:textColor="#fff" />
                         </LinearLayout>
 
                         <TextView
@@ -163,6 +163,7 @@
                                 android:layout_height="16dp"
                                 android:layout_marginRight="2dp"
                                 android:scaleType="centerInside"
+                                android:tint="#fff"
                                 app:srcCompat="@drawable/calender" />
 
                             <TextView
@@ -170,8 +171,9 @@
                                 android:layout_width="80dp"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
+                                android:layout_marginLeft="3dp"
                                 android:hint="10/11/2020"
-                                android:textColor="#000000" />
+                                android:textColor="#fff" />
 
                             <TextView
                                 android:id="@+id/endtime"
@@ -181,7 +183,7 @@
                                 android:layout_marginLeft="2dp"
                                 android:gravity="center"
                                 android:hint="9:00 AM"
-                                android:textColor="#000000" />
+                                android:textColor="#fff" />
 
                         </LinearLayout>
                     </LinearLayout>
