--- a/app/src/main/res/layout/activity_payment_page.xml
+++ b/app/src/main/res/layout/activity_payment_page.xml
@@ -510,10 +510,10 @@
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="26dp"
                         android:layout_marginLeft="30dp"
                         android:layout_marginTop="3dp"
-                        android:text="GST."
+                        android:text="GST(5% included)."
 
                         android:textColor="#fff"
                         android:textSize="16sp" />
@@ -521,7 +521,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="188dp"
+                        android:layout_marginLeft="100dp"
                         android:layout_marginTop="4dp"
                         android:text="₹"
                         android:textColor="#fff"
