--- a/app/src/main/res/layout/activity_payment_page.xml
+++ b/app/src/main/res/layout/activity_payment_page.xml
@@ -367,10 +367,11 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="30dp">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
+                        android:layout_weight="3"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="30dp"
                         android:layout_marginTop="3dp"
@@ -382,7 +383,6 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="150dp"
                         android:layout_marginTop="4dp"
                         android:text="₹"
                         android:textColor="#fff"
@@ -391,7 +391,8 @@
 
                     <TextView
                         android:id="@+id/basefare"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
+                      android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
                         android:layout_marginTop="4dp"
@@ -403,12 +404,14 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="30dp">
+
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="30dp"
                         android:layout_marginTop="3dp"
+                        android:layout_weight="3"
                         android:text="Delivery and Pick Up Charges."
 
                         android:textColor="#fff"
@@ -417,7 +420,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
+
                         android:layout_marginTop="4dp"
                         android:text="₹"
                         android:textColor="#fff"
@@ -426,10 +429,13 @@
 
                     <TextView
                         android:id="@+id/delivery"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
+
+
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
                         android:layout_marginTop="4dp"
+                        android:layout_weight="1"
                         android:text="0"
                         android:textColor="#fff"
                         android:textSize="16sp"
@@ -437,9 +443,10 @@
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="30dp">
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
+                        android:layout_weight="3"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="30dp"
                         android:layout_marginTop="3dp"
@@ -451,7 +458,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="165dp"
+
                         android:layout_marginTop="4dp"
                         android:text="₹"
                         android:textColor="#fff"
@@ -459,8 +466,10 @@
                         android:textStyle="bold" />
 
                     <TextView
+
                         android:id="@+id/security"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
                         android:layout_marginTop="4dp"
@@ -471,10 +480,11 @@
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="30dp">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
+                        android:layout_weight="3"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="30dp"
                         android:layout_marginTop="3dp"
@@ -486,7 +496,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="158dp"
+
                         android:layout_marginTop="4dp"
                         android:text="₹"
                         android:textColor="#fff"
@@ -495,7 +505,8 @@
 
                     <TextView
                         android:id="@+id/discount"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
                         android:layout_marginTop="4dp"
@@ -506,10 +517,11 @@
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="30dp">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
+                        android:layout_weight="3"
                         android:layout_height="26dp"
                         android:layout_marginLeft="30dp"
                         android:layout_marginTop="3dp"
@@ -521,7 +533,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="100dp"
+
                         android:layout_marginTop="4dp"
                         android:text="₹"
                         android:textColor="#fff"
@@ -530,7 +542,8 @@
 
                     <TextView
                         android:id="@+id/gst"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
                         android:layout_marginTop="4dp"
