--- a/app/src/main/res/layout/city.xml
+++ b/app/src/main/res/layout/city.xml
@@ -6,8 +6,10 @@
 <TextView
     android:layout_width="match_parent"
     android:hint="city name"
+    android:textColor="#000"
     android:padding="5dp"
     android:id="@+id/cityname"
+    android:textSize="20sp"
     android:gravity="left"
     android:layout_height="match_parent"/>
 
